[package]
name = "vr-game-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server and async runtime
tokio = { version = "1.35", features = ["full"] }
actix-web = "4.4"
actix-ws = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication and security
bcrypt = "0.15"
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Database (for production)
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"], optional = true }
redis = { version = "0.24", optional = true }

# Time and date
chrono = { version = "0.4", features = ["serde"] }

# Networking
bytes = "1.5"
futures = "0.3"

# Logging
env_logger = "0.11"
log = "0.4"

# Configuration
config = "0.14"

[dev-dependencies]
mockall = "0.12"

[features]
default = []
database = ["sqlx", "redis"]

[[bin]]
name = "auth-server"
path = "src/bin/auth_server_main.rs"

[[bin]]
name = "game-server"
path = "src/bin/game_server_main.rs"
